changes the path of picture

--- a/hackathon.html
+++ b/hackathon.html
@@ -67,10 +67,11 @@
     <section class="max-w-3xl w-full mx-auto flex flex-col gap-10">
       <!-- Hackathon Card 1 -->
       <div class="bg-white/80 backdrop-blur rounded-2xl p-6 shadow-lg border-t-4 border-indigo-400 flex flex-col items-center reveal">
-        <img src="hackathons\Sharath Chandra .R.png" alt="Hackathon 1 Photo" class="w-full h-44 object-cover rounded-xl mb-4 shadow-md border-2 border-indigo-200"/>
+        <img src="Sharath Chandra .R.png" alt="Hackathon 1 Photo" class="w-full h-44 object-cover rounded-xl mb-4 shadow-md border-2 border-indigo-200"/>
         <div class="flex items-center mb-2">
           <i class="fas fa-lightbulb fa-lg text-indigo-500 mr-2"></i>
           <span class="text-lg font-bold text-gray-900">INFATHON 2.0</span>
+          
         </div>
         <span class="inline-block bg-indigo-100 text-indigo-700 rounded-full px-3 py-1 text-xs font-semibold mb-2">Finalist</span>
         <p class="text-gray-700 mb-3 text-center">At VVCE College, Mysore, during a high-energy 24-hour hackathon, developed the "Reroute Master" project, focusing on real-time route optimization and managing disruptions in the logistics process.</p>
