--- a/certificates.html
+++ b/certificates.html
@@ -145,6 +145,32 @@
               <span class="font-bold text-gray-900">Tech A Web Responsive Website Developer Certification</span>
             </div>
             <span class="inline-block bg-blue-100 text-blue-700 rounded-full px-3 py-1 text-xs font-semibold mb-2">Infosys Springboard</span>
+            <p class="text-gray-700 mb-2">This course equips learners with the skills to design and develop fully responsive websites that adapt seamlessly across all devices. Covering HTML, CSS, JavaScript, and modern frameworks, the program focuses on practical, real-world projects to build strong front-end development capabilities. </p>
+            <a href="https://drive.google.com/file/d/1GDIQe_FSzGmdPOGYF4fCzcwLgzE9GQyO/view?usp=drive_link" target="_blank" rel="noopener" class="mt-2 mb-2 inline-flex items-center px-4 py-2 rounded-full bg-gradient-to-r from-blue-500 to-indigo-400 text-white font-semibold shadow hover:scale-105 hover:bg-blue-600 transition-all duration-200">
+              <i class="fab fa-google-drive mr-2"></i> View Certificate
+            </a>
+            <div class="flex items-center text-gray-500 text-xs mt-auto">
+              <i class="far fa-calendar-alt mr-1"></i> [Year]
+            </div>
+          </div>
+        </div>
+        <div class="w-8 h-8 bg-blue-500 border-4 border-white rounded-full absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2 z-10 flex items-center justify-center">
+          <i class="fas fa-certificate text-white"></i>
+        </div>
+        <div class="md:w-1/2"></div>
+      </div>
+      <!-- Add more timeline items as needed -->
+    </section>
+  </div>
+  <div class="relative mb-16 flex flex-col md:flex-row items-center reveal">
+        <div class="md:w-1/2 md:pr-12 flex justify-end md:justify-center mb-4 md:mb-0">
+          <div class="bg-white/90 rounded-2xl shadow-lg border-l-4 border-blue-400 p-6 w-full max-w-xs flex flex-col items-start">
+            <div class="flex items-center mb-2">
+              <!-- Icon and Title -->
+              <i class="fas fa-book fa-lg text-blue-500 mr-2"></i>
+              <span class="font-bold text-gray-900">Tech A Web Responsive Website Developer Certification</span>
+            </div>
+            <span class="inline-block bg-blue-100 text-blue-700 rounded-full px-3 py-1 text-xs font-semibold mb-2">Infosys Springboard</span>
             <p class="text-gray-700 mb-2">This course equips learners with the skills to design and develop fully responsive websites that adapt seamlessly across all devices. Covering HTML, CSS, JavaScript, and modern frameworks, the program focuses on practical, real-world projects to build strong front-end development capabilities. Ideal for beginners and aspiring web developers.</p>
             <a href="https://drive.google.com/file/d/1GDIQe_FSzGmdPOGYF4fCzcwLgzE9GQyO/view?usp=drive_link" target="_blank" rel="noopener" class="mt-2 mb-2 inline-flex items-center px-4 py-2 rounded-full bg-gradient-to-r from-blue-500 to-indigo-400 text-white font-semibold shadow hover:scale-105 hover:bg-blue-600 transition-all duration-200">
               <i class="fab fa-google-drive mr-2"></i> View Certificate
