--- a/hackathon.html
+++ b/hackathon.html
@@ -84,12 +84,13 @@
         <img src="https://placehold.co/400x220?text=Hackathon+2+Photo" alt="Hackathon 2 Photo" class="w-full h-44 object-cover rounded-xl mb-4 shadow-md border-2 border-yellow-200"/>
         <div class="flex items-center mb-2">
           <i class="fas fa-rocket fa-lg text-yellow-500 mr-2"></i>
-          <span class="text-lg font-bold text-gray-900">CodeSprint National</span>
+          <span class="text-lg font-bold text-gray-900">AMBITION </span>
         </div>
         <span class="inline-block bg-yellow-100 text-yellow-700 rounded-full px-3 py-1 text-xs font-semibold mb-2">Finalist</span>
-        <p class="text-gray-700 mb-3 text-center">Built a next-gen e-commerce recommendation engine, reaching the finals for creative use of machine learning and user experience design.</p>
+        <p class="text-gray-700 mb-3 text-center">At BIT Bangalore, in a fast-paced 24-hour hackathon, created "Schedule
+          Symphony," an innovative solution for managing schedules efficiently, turning the concept into a working application within the time limit</p>
         <div class="flex items-center text-gray-500 text-sm mt-auto">
-          <i class="far fa-calendar-alt mr-2"></i> 2022
+          <i class="far fa-calendar-alt mr-2"></i> 2024
         </div>
       </div>
       <!-- Hackathon Card 3 -->
