--- a/certificates.html
+++ b/certificates.html
@@ -150,7 +150,7 @@
               <i class="fab fa-google-drive mr-2"></i> View Certificate
             </a>
             <div class="flex items-center text-gray-500 text-xs mt-auto">
-              <i class="far fa-calendar-alt mr-1"></i> [Year]
+              <i class="far fa-calendar-alt mr-1"></i> 2025
             </div>
           </div>
         </div>
