--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
       <div class="bg-neutral-900/90 rounded-3xl flex flex-col md:flex-row items-stretch shadow-2xl border border-neutral-800 overflow-hidden">
         <!-- Left: Info -->
         <div class="flex-1 flex flex-col justify-center p-10 md:p-16 text-white">
-          <h2 class="text-6xl font-extrabold leading-tight mb-8">Let's<br>contact</h2>
+          <h2 class="text-6xl font-extrabold leading-tight mb-8">Let's<br>Contact</h2>
           <p class="text-lg mb-8 text-gray-300">Whether you're curious, stuck, or dreaming up your next big idea — I'm all ears. If you need a hand, a fresh perspective, or a developer who thinks beyond the code, just drop a message. Let's turn ideas into something real.</p>
           <hr class="border-gray-700 mb-8">
           <div class="flex items-center mb-4"><i class="fas fa-phone-alt mr-4"></i> <span class="text-lg">+91 9036325795</span></div>
