--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
         </div>
         <!-- Right: Form -->
         <div class="flex-1 bg-neutral-900/80 flex items-center justify-center p-8 md:p-16">
-          <form class="w-full max-w-lg space-y-6" action="#" method="POST">
+          <form class="w-full max-w-lg space-y-6" action="https://formspree.io/f/xeokjnlo" method="POST">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
               <div>
                 <label class="block text-white font-semibold mb-2" for="name">Name</label>
