--- a/hackathon.html
+++ b/hackathon.html
@@ -81,7 +81,7 @@
       </div>
       <!-- Hackathon Card 2 -->
       <div class="bg-white/80 backdrop-blur rounded-2xl p-6 shadow-lg border-t-4 border-yellow-400 flex flex-col items-center reveal">
-        <img src="https://placehold.co/400x220?text=Hackathon+2+Photo" alt="Hackathon 2 Photo" class="w-full h-44 object-cover rounded-xl mb-4 shadow-md border-2 border-yellow-200"/>
+        <img src="hackathons\ambition.png" alt="Hackathon 2 Photo" class="w-full h-44 object-cover rounded-xl mb-4 shadow-md border-2 border-yellow-200"/>
         <div class="flex items-center mb-2">
           <i class="fas fa-rocket fa-lg text-yellow-500 mr-2"></i>
           <span class="text-lg font-bold text-gray-900">AMBITION </span>
