--- a/team-leadership.html
+++ b/team-leadership.html
@@ -94,6 +94,9 @@
           <h3 class="font-bold text-lg text-green-700 mb-1">Vice President, Nodedotai-Techno Cultural Club</h3>
           <span class="inline-block bg-green-100 text-green-700 rounded-full px-3 py-1 text-xs font-semibold mb-2">2023</span>
           <p class="text-gray-700 mb-2">Led a team of 6 in building a scalable IoT platform for smart city infrastructure, resulting in a successful pilot deployment and recognition by city officials.</p>
+          <a href="https://www.instagram.com/p/C8cFq-8yw6W/?igsh=dzZ0OHYzZmdycmQ=" target="_blank" rel="noopener" class="mt-2 inline-flex items-center px-4 py-2 rounded-full bg-gradient-to-r from-green-500 to-blue-400 text-white font-semibold shadow hover:scale-105 hover:bg-green-600 transition-all duration-200">
+            <i class="fab fa-instagram mr-2"></i> View Post
+          </a>
         </div>
       </div>
       <!-- Timeline Item 2 -->
