--- a/team-leadership.html
+++ b/team-leadership.html
@@ -93,7 +93,7 @@
         <div class="flex-1 bg-white/90 rounded-2xl shadow-lg p-6">
           <h3 class="font-bold text-lg text-green-700 mb-1">Vice President, Nodedotai-Techno Cultural Club</h3>
           <span class="inline-block bg-green-100 text-green-700 rounded-full px-3 py-1 text-xs font-semibold mb-2">2023</span>
-          <p class="text-gray-700 mb-2">Led a team of 6 in building a scalable IoT platform for smart city infrastructure, resulting in a successful pilot deployment and recognition by city officials.</p>
+          <p class="text-gray-700 mb-2">Led and organized numerous technical and cultural events to enhance students' technical skills and soft talents as the Vice President of the student association. Collaborated with faculty and industry professionals to host workshops, coding challenges, panel discussions, and cultural programs, fostering a well-rounded campus environment. Took initiative in mentoring junior members, driving strategic planning, and promoting active student participation across departments.</p>
           <a href="https://www.instagram.com/p/C8cFq-8yw6W/?igsh=dzZ0OHYzZmdycmQ=" target="_blank" rel="noopener" class="mt-2 inline-flex items-center px-4 py-2 rounded-full bg-gradient-to-r from-green-500 to-blue-400 text-white font-semibold shadow hover:scale-105 hover:bg-green-600 transition-all duration-200">
             <i class="fab fa-instagram mr-2"></i> View Post
           </a>
@@ -105,9 +105,12 @@
           <i class="fas fa-users-cog text-2xl text-green-600"></i>
         </div>
         <div class="flex-1 bg-white/90 rounded-2xl shadow-lg p-6">
-          <h3 class="font-bold text-lg text-green-700 mb-1">Team Lead, CodeSprint Hackathon</h3>
+          <h3 class="font-bold text-lg text-green-700 mb-1">Speaker Management, Gen-Ai Summit 2.O</h3>
           <span class="inline-block bg-green-100 text-green-700 rounded-full px-3 py-1 text-xs font-semibold mb-2">2022</span>
-          <p class="text-gray-700 mb-2">Coordinated a cross-functional team to develop an award-winning e-commerce recommendation engine, reaching the national finals.</p>
+          <p class="text-gray-700 mb-2">As part of the organizing team at the Gen AI Summit by Inc42 Media (April 9th, 2025, JW Marriott), I took a leadership role in Speaker Management, overseeing end-to-end coordination with startup founders and industry leaders. Selected through a competitive process, I ensured smooth scheduling, clear communication, and real-time problem-solving under pressure. This role strengthened my ability to lead operational tasks, collaborate effectively, and deliver a seamless experience in a high-impact, fast-paced environment.</p>
+          <a href="https://www.linkedin.com/posts/sharath-chandra-r_genaisummit-inc42media-eventoperations-activity-7323296984830791680-OivM?utm_source=share&utm_medium=member_desktop&rcm=ACoAAEAd-TUBKkkn8QM7QoAt_L1uQ5mhygiEzjw" target="_blank" rel="noopener" class="mt-2 inline-flex items-center px-4 py-2 rounded-full bg-gradient-to-r from-green-500 to-blue-400 text-white font-semibold shadow hover:scale-105 hover:bg-green-600 transition-all duration-200">
+            <i class="fab fa-linkedin mr-2"></i> View Post
+          </a>
         </div>
       </div>
       <!-- Timeline Item 3 -->
