--- a/team-leadership.html
+++ b/team-leadership.html
@@ -119,9 +119,9 @@
           <i class="fas fa-hands-helping text-2xl text-green-600"></i>
         </div>
         <div class="flex-1 bg-white/90 rounded-2xl shadow-lg p-6">
-          <h3 class="font-bold text-lg text-green-700 mb-1">Mentor, University Coding Club</h3>
+          <h3 class="font-bold text-lg text-green-700 mb-1">Project Lead and Vice President of Nodedotai, Industry Academia and Alumni Integration</h3>
           <span class="inline-block bg-green-100 text-green-700 rounded-full px-3 py-1 text-xs font-semibold mb-2">2021</span>
-          <p class="text-gray-700 mb-2">Mentored junior students, organized coding workshops, and fostered a collaborative learning environment.</p>
+          <p class="text-gray-700 mb-2">As Vice President of the club and Project Lead, I spearheaded the organization and presentation of innovative student projects at the 2024 Industry Academia and Alumni Integration Summit. Our exhibit focused on cutting-edge AI image generation, supported by applications built using Flutter and data science tools. I led a multidisciplinary team, coordinated the project pipeline, and ensured clear communication of our technical vision to industry experts. Our efforts were recognized with 2nd place overall and 1st in software development, highlighting the strength of our leadership, collaboration, and innovation.</p>
         </div>
       </div>
       <!-- Add more timeline items as needed -->
