--- a/certificates.html
+++ b/certificates.html
@@ -159,21 +159,20 @@
         </div>
         <div class="md:w-1/2"></div>
       </div>
-      <!-- Certificate Timeline Item 4 (Right side, Placeholder) -->
+      <!-- Certificate Timeline Item 4 (Right side, Power BI) -->
       <div class="relative mb-16 flex flex-col md:flex-row items-center reveal">
         <div class="md:w-1/2"></div>
         <div class="w-8 h-8 bg-purple-500 border-4 border-white rounded-full absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2 z-10 flex items-center justify-center">
-          <i class="fas fa-certificate text-white"></i>
+          <i class="fas fa-chart-bar text-white"></i>
         </div>
         <div class="md:w-1/2 md:pl-12 flex justify-start md:justify-center mt-4 md:mt-0">
           <div class="bg-white/90 rounded-2xl shadow-lg border-l-4 border-purple-400 p-6 w-full max-w-xs flex flex-col items-start">
             <div class="flex items-center mb-2">
-              <!-- Icon and Title -->
-              <i class="fas fa-briefcase fa-lg text-purple-500 mr-2"></i>
-              <span class="font-bold text-gray-900">[Certificate Title]</span>
+              <i class="fas fa-chart-bar fa-lg text-purple-500 mr-2"></i>
+              <span class="font-bold text-gray-900">Power BI: Software for Data Visualization</span>
             </div>
-            <span class="inline-block bg-purple-100 text-purple-700 rounded-full px-3 py-1 text-xs font-semibold mb-2">[Issuing Organization]</span>
-            <p class="text-gray-700 mb-2">[Description of what you learned or achieved in this certificate.]</p>
+            <span class="inline-block bg-purple-100 text-purple-700 rounded-full px-3 py-1 text-xs font-semibold mb-2">Infosys Springboard</span>
+            <p class="text-gray-700 mb-2">This certification focused on leveraging Power BI for data visualization, including creating interactive dashboards, data modeling, and generating actionable insights from complex datasets.</p>
             <a href="[Certificate Link]" target="_blank" rel="noopener" class="mt-2 mb-2 inline-flex items-center px-4 py-2 rounded-full bg-gradient-to-r from-purple-500 to-indigo-400 text-white font-semibold shadow hover:scale-105 hover:bg-purple-600 transition-all duration-200">
               <i class="fas fa-link mr-2"></i> View Certificate
             </a>
