--- a/certificates.html
+++ b/certificates.html
@@ -177,7 +177,7 @@
               <i class="fas fa-link mr-2"></i> View Certificate
             </a>
             <div class="flex items-center text-gray-500 text-xs mt-auto">
-              <i class="far fa-calendar-alt mr-1"></i> [Year]
+              <i class="far fa-calendar-alt mr-1"></i> 2024
             </div>
           </div>
         </div>
