--- a/hackathon.html
+++ b/hackathon.html
@@ -95,15 +95,15 @@
       </div>
       <!-- Hackathon Card 3 -->
       <div class="bg-white/80 backdrop-blur rounded-2xl p-6 shadow-lg border-t-4 border-pink-400 flex flex-col items-center reveal">
-        <img src="https://placehold.co/400x220?text=Hackathon+3+Photo" alt="Hackathon 3 Photo" class="w-full h-44 object-cover rounded-xl mb-4 shadow-md border-2 border-pink-200"/>
+        <img src="hackathons\Sharath Chandra .R.png" alt="Hackathon 3 Photo" class="w-full h-44 object-cover rounded-xl mb-4 shadow-md border-2 border-pink-200"/>
         <div class="flex items-center mb-2">
           <i class="fas fa-award fa-lg text-pink-500 mr-2"></i>
-          <span class="text-lg font-bold text-gray-900">[Hackathon Name]</span>
+          <span class="text-lg font-bold text-gray-900">Hackothsava - 2k24</span>
         </div>
         <span class="inline-block bg-pink-100 text-pink-700 rounded-full px-3 py-1 text-xs font-semibold mb-2">Finalist</span>
-        <p class="text-gray-700 mb-3 text-center">[Project description and achievement details for your third hackathon. Replace this text with your info.]</p>
+        <p class="text-gray-700 mb-3 text-center">Developed a Smart Card System as part of a hackathon at Shri Madhwa Vadiraja Institute of Technology and Management (SMVITM), Bantakal, Udupi, Karnataka, integrating identity verification, debit transactions, and criminal identification into a unified platform. The system was built using Python for backend processing, MySQL for data management, and OpenCV for facial recognition, aiming to enhance security and streamline user authentication and payment processes across institutional and public use cases.</p>
         <div class="flex items-center text-gray-500 text-sm mt-auto">
-          <i class="far fa-calendar-alt mr-2"></i> [Year]
+          <i class="far fa-calendar-alt mr-2"></i> 2024
         </div>
       </div>
     </section>
