--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
       <div class="bg-neutral-900/90 rounded-3xl flex flex-col md:flex-row items-stretch shadow-2xl border border-neutral-800 overflow-hidden">
         <!-- Left: Info -->
         <div class="flex-1 flex flex-col justify-center p-10 md:p-16 text-white">
-          <h2 class="text-6xl font-extrabold leading-tight mb-8">Let's<br>Contact</h2>
+          <h2 class="text-6xl font-extrabold leading-tight mb-8">Let's<br>Connect</h2>
           <p class="text-lg mb-8 text-gray-300">Whether you're curious, stuck, or dreaming up your next big idea — I'm all ears. If you need a hand, a fresh perspective, or a developer who thinks beyond the code, just drop a message. Let's turn ideas into something real.</p>
           <hr class="border-gray-700 mb-8">
           <div class="flex items-center mb-4"><i class="fas fa-phone-alt mr-4"></i> <span class="text-lg">+91 9036325795</span></div>
@@ -370,12 +370,12 @@
               </div>
               <div>
                 <label class="block text-white font-semibold mb-2" for="phone">Phone <span class="text-gray-400 font-normal">(optional)</span></label>
-                <input class="w-full bg-neutral-800 text-white border border-gray-700 rounded-md px-4 py-3 focus:outline-none focus:ring-2 focus:ring-indigo-500" id="phone" name="phone" placeholder="+123456789" />
+                <input class="w-full bg-neutral-800 text-white border border-gray-700 rounded-md px-4 py-3 focus:outline-none focus:ring-2 focus:ring-indigo-500" id="phone" name="phone" placeholder="+91 9035795892" />
               </div>
             </div>
             <div>
               <label class="block text-white font-semibold mb-2" for="message">Message</label>
-              <textarea class="w-full bg-neutral-800 text-white border border-gray-700 rounded-md px-4 py-3 focus:outline-none focus:ring-2 focus:ring-indigo-500" id="message" name="message" placeholder="I need..." rows="4"></textarea>
+              <textarea class="w-full bg-neutral-800 text-white border border-gray-700 rounded-md px-4 py-3 focus:outline-none focus:ring-2 focus:ring-indigo-500" id="message" name="message" placeholder="Hello There..." rows="4"></textarea>
             </div>
             <button type="submit" class="w-full relative overflow-hidden bg-gradient-to-r from-indigo-500/80 via-purple-600/80 to-pink-500/80 text-white font-bold px-8 py-3 rounded-full shadow-xl flex items-center justify-center text-lg group border-2 border-transparent transition-all duration-300 focus:outline-none focus:ring-2 focus:ring-indigo-400 backdrop-blur-md hover:border-indigo-400 hover:shadow-pink-500/30">
               <!-- Animated Gradient Border -->
