--- a/index.html
+++ b/index.html
@@ -187,16 +187,16 @@
             <p class="mt-2 text-gray-300 text-lg group-hover:text-gray-100 transition-colors duration-200">A Python-based project to teach and demonstrate the fundamentals of working with APIs. Includes hands-on examples and real-world use cases.</p>
           </a>
           <!-- Project Card 4 -->
-          <a href="project4.html" class="group relative min-w-[340px] md:min-w-[420px] max-w-[90vw] snap-center bg-gradient-to-br from-yellow-900/60 via-neutral-900/80 to-yellow-800/60 backdrop-blur-lg rounded-3xl p-10 shadow-2xl border-4 border-yellow-500/40 hover:border-yellow-400 transition-all duration-300 overflow-hidden cursor-pointer hover:scale-102 hover:shadow-yellow-400/30 hover:-translate-y-1 project-card block focus:outline-none" style="text-decoration: none;">
+          <a href="https://github.com/sharathchandra2004/jk-internships.git" class="group relative min-w-[340px] md:min-w-[420px] max-w-[90vw] snap-center bg-gradient-to-br from-yellow-900/60 via-neutral-900/80 to-yellow-800/60 backdrop-blur-lg rounded-3xl p-10 shadow-2xl border-4 border-yellow-500/40 hover:border-yellow-400 transition-all duration-300 overflow-hidden cursor-pointer hover:scale-102 hover:shadow-yellow-400/30 hover:-translate-y-1 project-card block focus:outline-none" style="text-decoration: none;">
             <div class="absolute -top-10 -right-10 w-40 h-40 bg-yellow-500/20 rounded-full blur-2xl opacity-60 pointer-events-none"></div>
             <span class="absolute left-8 top-8 text-7xl font-extrabold text-yellow-900/20 select-none pointer-events-none">04</span>
             <div class="flex items-center justify-between mb-4 relative z-10">
-              <span class="inline-flex items-center px-4 py-1 bg-yellow-700/30 text-yellow-200 rounded-full text-sm font-semibold shadow">Blog</span>
-              <i class="fas fa-blog text-3xl text-yellow-300 drop-shadow group-hover:animate-wiggle"></i>
+              <span class="inline-flex items-center px-4 py-1 bg-yellow-700/30 text-yellow-200 rounded-full text-sm font-semibold shadow">Data Analysis</span>
+              <i class="fas fa-chart-line text-3xl text-yellow-300 drop-shadow group-hover:animate-wiggle"></i>
             </div>
-            <img alt="Project 4 blog website homepage featuring featured articles and clean typography" class="w-full h-56 object-cover rounded-xl mb-6 border-2 border-yellow-500/20 group-hover:scale-105 transition-transform duration-300 shadow-lg" src="https://storage.googleapis.com/a1aa/image/3cf4fb23-9995-4908-96e0-805f15c40ad7.jpg"/>
-            <h3 class="mt-2 text-3xl font-extrabold text-white group-hover:text-yellow-300 transition-colors duration-200">Blog Website</h3>
-            <p class="mt-2 text-gray-300 text-lg group-hover:text-gray-100 transition-colors duration-200">Minimalist blog design focused on readability and content hierarchy.</p>
+            <img alt="Textile Dye Supplier Risk Analysis Dashboard preview" class="w-full h-56 object-cover rounded-xl mb-6 border-2 border-yellow-500/20 group-hover:scale-105 transition-transform duration-300 shadow-lg" src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=800&q=80"/>
+            <h3 class="mt-2 text-3xl font-extrabold text-white group-hover:text-yellow-300 transition-colors duration-200">Textile Dye Supplier Risk Dashboard</h3>
+            <p class="mt-2 text-gray-300 text-lg group-hover:text-gray-100 transition-colors duration-200">A Streamlit-based app for analyzing risks of textile dye suppliers with interactive visualizations and AI-powered insights for 2023-2024.</p>
           </a>
         </div>
         <!-- Carousel Progress Dots -->
@@ -284,11 +284,11 @@
           <h3 class="font-semibold text-lg mb-2 text-white">Team Leadership</h3>
           <p class="text-gray-300 text-center">Led multiple successful projects with cross-functional teams, delivering on time and exceeding expectations.</p>
         </a>
-        <a href="client-satisfaction.html" class="transition-all duration-300 hover:scale-105 hover:shadow-pink-700/30 hover:shadow-2xl bg-white/10 backdrop-blur rounded-2xl p-8 flex flex-col items-center border-t-4 border-pink-400 shadow-lg reveal focus:outline-none focus:ring-4 focus:ring-pink-200" style="text-decoration: none;">
+        <!-- <a href="client-satisfaction.html" class="transition-all duration-300 hover:scale-105 hover:shadow-pink-700/30 hover:shadow-2xl bg-white/10 backdrop-blur rounded-2xl p-8 flex flex-col items-center border-t-4 border-pink-400 shadow-lg reveal focus:outline-none focus:ring-4 focus:ring-pink-200" style="text-decoration: none;">
           <div class="bg-pink-900/40 rounded-full p-4 mb-4"><i class="fas fa-star fa-2x text-pink-300"></i></div>
           <h3 class="font-semibold text-lg mb-2 text-white">Client Satisfaction</h3>
           <p class="text-gray-300 text-center">Consistently received top ratings and positive feedback from clients for quality and reliability.</p>
-        </a>
+        </a> -->
       </div>
     </section>
     <!-- Services Section -->
@@ -324,7 +324,7 @@
               <span class="inline-flex items-center px-2 py-1 bg-yellow-600 text-white rounded-full text-xs"><i class="fas fa-chalkboard mr-1"></i>Presentations</span>
             </div>
           </div>
-          <div class="bg-neutral-900/60 rounded-2xl p-6 flex flex-col transition-all duration-300 hover:scale-105 hover:shadow-indigo-700/30 hover:shadow-2xl reveal">
+          <!-- <div class="bg-neutral-900/60 rounded-2xl p-6 flex flex-col transition-all duration-300 hover:scale-105 hover:shadow-indigo-700/30 hover:shadow-2xl reveal">
             <img src="https://storage.googleapis.com/a1aa/image/3cf4fb23-9995-4908-96e0-805f15c40ad7.jpg" alt="UX & UI Design" class="rounded-xl mb-4 w-full h-40 object-cover"/>
             <h3 class="font-semibold text-lg mb-2 text-white">UX & UI Design</h3>
             <p class="text-gray-300 mb-4">We develop beautiful design and user-friendly interfaces for websites and mobile applications.</p>
@@ -343,7 +343,7 @@
             <p class="text-gray-300 mb-4">To automate business processes and improve the work of the sales department.</p>
           </div>
         </div>
-      </div>
+      </div> -->
     </section>
     <!-- Contact Section -->
     <section class="mt-20 w-full max-w-6xl mx-auto px-8 sm:px-0 reveal text-xl" id="contact">
