--- a/project4.html
+++ b/project4.html
@@ -1,68 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blog Website - Project Landing Page</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Textile Dye Supplier Risk Dashboard - Sharath Chandra R</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
   <style>
-    body { font-family: 'Poppins', 'Inter', sans-serif; }
+    body {
+      font-family: 'Poppins', 'Inter', sans-serif;
+      background: linear-gradient(135deg, #f8fafc 0%, #e0e7ff 100%);
+      min-height: 100vh;
+    }
+    .reveal {
+      opacity: 0;
+      transform: translateY(40px);
+      transition: opacity 1s cubic-bezier(.4,0,.2,1), transform 1s cubic-bezier(.4,0,.2,1);
+    }
+    .reveal.visible {
+      opacity: 1;
+      transform: none;
+    }
+    @keyframes wiggle {
+      0%, 100% { transform: rotate(0deg);}
+      20% { transform: rotate(-10deg);}
+      40% { transform: rotate(8deg);}
+      60% { transform: rotate(-6deg);}
+      80% { transform: rotate(4deg);}
+    }
+    .group:hover .group-hover\:animate-wiggle {
+      animation: wiggle 0.5s;
+    }
   </style>
 </head>
-<body class="bg-gradient-to-br from-yellow-50 via-pink-100 to-indigo-100 min-h-screen text-gray-900 antialiased">
-  <!-- HERO SECTION -->
-  <section class="w-full py-20 px-4 flex flex-col items-center bg-white/90 shadow-sm relative z-10">
-    <div class="max-w-2xl w-full text-center mx-auto">
-      <span class="inline-block bg-yellow-100 text-yellow-700 rounded-full px-4 py-1 text-lg font-semibold mb-4">Featured Project</span>
-      <h1 class="text-6xl font-extrabold mb-6 tracking-tight bg-gradient-to-r from-yellow-400 via-pink-400 to-indigo-400 bg-clip-text text-transparent">Blog Website</h1>
-      <p class="text-2xl text-gray-600 mb-8">A minimalist blog platform focused on readability, clean typography, and a distraction-free reading experience for creators and readers alike.</p>
-    </div>
-  </section>
-
-  <!-- PROJECT IMAGE -->
-  <section class="w-full flex justify-center py-10 px-4 relative z-10">
-    <div class="bg-white rounded-2xl shadow-xl border border-yellow-100 p-4 max-w-2xl w-full flex flex-col items-center transition-transform duration-300 hover:scale-105">
-      <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=800&q=80" alt="Blog Website Screenshot" class="rounded-xl w-full max-w-lg h-64 object-cover shadow-md border-2 border-yellow-100"/>
-    </div>
-  </section>
-
-  <!-- FEATURES SECTION -->
-  <section class="max-w-4xl w-full mx-auto px-4 py-10">
-    <h2 class="text-4xl font-bold text-center mb-10 text-yellow-700">Why This Blog Website?</h2>
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-      <div class="bg-white rounded-xl shadow p-6 flex flex-col items-center">
-        <i class="fas fa-book-open text-yellow-500 text-4xl mb-5"></i>
-        <h3 class="font-semibold text-xl mb-3">Minimalist Design</h3>
-        <p class="text-gray-600 text-center text-lg">Focus on content with clean layouts and beautiful typography.</p>
+<body class="text-gray-900 antialiased">
+  <div class="w-full flex flex-col items-center mt-8">
+    <!-- Creative Back Button -->
+    <a href="index.html#work"
+       class="fixed top-8 left-8 z-50 group flex items-center justify-center w-16 h-16 bg-white/70 backdrop-blur-lg shadow-2xl rounded-full border-2 border-yellow-400 hover:bg-gradient-to-tr hover:from-yellow-400 hover:to-yellow-600 hover:text-white transition-all duration-500 focus:outline-none focus:ring-4 focus:ring-yellow-200"
+       title="Back to Portfolio"
+       style="box-shadow: 0 8px 32px 0 rgba(180,180,80,0.18);">
+      <!-- Sparkles -->
+      <svg class="absolute -top-2 -left-2 w-5 h-5 text-yellow-200 opacity-80 group-hover:animate-ping" fill="currentColor" viewBox="0 0 20 20"><circle cx="10" cy="10" r="2"/></svg>
+      <svg class="absolute -bottom-2 -right-2 w-4 h-4 text-yellow-300 opacity-80 group-hover:animate-pulse" fill="currentColor" viewBox="0 0 20 20"><circle cx="10" cy="10" r="1.5"/></svg>
+      <!-- Arrow Icon -->
+      <i class="fas fa-arrow-left text-2xl transition-transform duration-300 group-hover:-translate-x-1 group-hover:animate-wiggle"></i>
+      <!-- Tooltip -->
+      <span class="absolute left-20 opacity-0 group-hover:opacity-100 group-hover:translate-x-2 bg-yellow-600 text-white text-sm font-semibold rounded-lg px-4 py-2 ml-2 transition-all duration-500 pointer-events-none shadow-lg"
+            style="top: 50%; transform: translateY(-50%);">
+        Back to Portfolio
+      </span>
+    </a>
+    <!-- Mobile sticky back button -->
+    <a href="index.html#work"
+       class="md:hidden sticky top-4 left-0 w-fit mx-4 mb-8 flex items-center justify-center bg-gradient-to-tr from-yellow-400 to-yellow-600 shadow rounded-full border-2 border-yellow-200 px-4 py-2 text-white font-semibold hover:scale-105 transition-all duration-300 focus:outline-none focus:ring-4 focus:ring-yellow-200">
+      <i class="fas fa-arrow-left mr-2"></i> Back
+    </a>
+    <!-- Hero Section -->
+    <section class="max-w-3xl w-full mx-auto text-center mb-16">
+      <div class="flex flex-col items-center mb-6">
+        <div class="w-24 h-24 rounded-full bg-yellow-100 flex items-center justify-center mb-4 shadow-lg">
+          <i class="fas fa-chart-line text-5xl text-yellow-500"></i>
+        </div>
+        <span class="inline-block px-4 py-1 bg-yellow-100 text-yellow-700 rounded-full text-sm font-semibold mb-4">Data Analysis Project</span>
       </div>
-      <div class="bg-white rounded-xl shadow p-6 flex flex-col items-center">
-        <i class="fas fa-rocket text-pink-500 text-4xl mb-5"></i>
-        <h3 class="font-semibold text-xl mb-3">SEO & Performance</h3>
-        <p class="text-gray-600 text-center text-lg">Built with Next.js for fast, SEO-friendly pages and global reach.</p>
+      <h1 class="text-4xl sm:text-5xl font-extrabold mb-4 tracking-tight flex items-center justify-center gap-3">Textile Dye Supplier Risk Dashboard</h1>
+      <p class="text-lg text-gray-600 max-w-2xl mx-auto">A Streamlit-based web application for analyzing and visualizing risks associated with top textile dye suppliers for 2023-2024.</p>
+      <a href="https://github.com/sharathchandra2004/jk-internships.git" target="_blank" rel="noopener" class="mt-6 inline-flex items-center px-6 py-3 rounded-full bg-gradient-to-r from-yellow-500 to-orange-400 text-white font-bold shadow-lg hover:scale-105 hover:from-yellow-600 hover:to-orange-500 transition-all duration-300">
+        <i class="fab fa-github mr-2"></i> View on GitHub
+      </a>
+    </section>
+    <!-- Project Details -->
+    <section class="max-w-4xl w-full mx-auto mb-16 reveal">
+      <div class="bg-white/80 backdrop-blur rounded-2xl shadow-lg p-8 border-t-4 border-yellow-400">
+        <h2 class="text-2xl font-bold text-gray-900 mb-6">Project Overview</h2>
+        <p class="text-gray-700 mb-6">This project is designed to help stakeholders in the textile industry monitor and analyze risks related to dye suppliers. It integrates advanced risk classification, sentiment analysis using VADER, and AI-generated recommendations powered by Cohere. The dashboard offers a modern, dark-themed UI with interactive visualizations built using Plotly.</p>
+        <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=1200&q=80" alt="Textile Dye Supplier Risk Dashboard" class="w-full rounded-xl shadow-lg mb-6 border-2 border-yellow-200">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
+          <div class="bg-yellow-50 rounded-xl p-4 shadow">
+            <h3 class="font-bold text-lg text-yellow-700 mb-2">Key Features</h3>
+            <ul class="text-gray-700 space-y-2">
+              <li class="flex items-start"><i class="fas fa-check-circle text-yellow-500 mr-2 mt-1"></i> Supplier and Risk Filtering for focused analysis.</li>
+              <li class="flex items-start"><i class="fas fa-check-circle text-yellow-500 mr-2 mt-1"></i> Risk Classification into Geopolitical, Environmental, Financial, Supply Chain, and Market risks.</li>
+              <li class="flex items-start"><i class="fas fa-check-circle text-yellow-500 mr-2 mt-1"></i> Sentiment Analysis using VADER to determine risk direction.</li>
+              <li class="flex items-start"><i class="fas fa-check-circle text-yellow-500 mr-2 mt-1"></i> AI-Powered Summaries and Recommendations via Cohere API.</li>
+              <li class="flex items-start"><i class="fas fa-check-circle text-yellow-500 mr-2 mt-1"></i> Interactive Visualizations for monthly risk trends and sentiment scores.</li>
+            </ul>
+          </div>
+          <div class="bg-yellow-50 rounded-xl p-4 shadow">
+            <h3 class="font-bold text-lg text-yellow-700 mb-2">Technologies Used</h3>
+            <ul class="text-gray-700 space-y-2">
+              <li class="flex items-start"><i class="fas fa-code text-yellow-500 mr-2 mt-1"></i> Streamlit for the web application.</li>
+              <li class="flex items-start"><i class="fas fa-code text-yellow-500 mr-2 mt-1"></i> Pandas for data manipulation.</li>
+              <li class="flex items-start"><i class="fas fa-code text-yellow-500 mr-2 mt-1"></i> Plotly for interactive charts.</li>
+              <li class="flex items-start"><i class="fas fa-code text-yellow-500 mr-2 mt-1"></i> Cohere API for summaries and recommendations.</li>
+              <li class="flex items-start"><i class="fas fa-code text-yellow-500 mr-2 mt-1"></i> NLTK (VADER) for sentiment analysis.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="flex flex-col md:flex-row gap-4 mb-6">
+          <div class="flex-1 bg-yellow-100 rounded-xl p-4 shadow">
+            <h3 class="font-bold text-lg text-yellow-700 mb-2">Data Source</h3>
+            <p class="text-gray-700">The dashboard uses a JSON dataset (<code>RawDatav4.json</code>) containing articles from 2023-2024 related to top textile dye suppliers, processed to extract risk information.</p>
+          </div>
+          <div class="flex-1 bg-yellow-100 rounded-xl p-4 shadow">
+            <h3 class="font-bold text-lg text-yellow-700 mb-2">UI Design</h3>
+            <p class="text-gray-700">Features a dark theme with custom CSS, responsive layout, interactive elements, and a clean, card-based design for content sections.</p>
+          </div>
+        </div>
+        <h2 class="text-2xl font-bold text-gray-900 mt-8 mb-4">Installation</h2>
+        <p class="text-gray-700 mb-4">To run this project locally, follow these steps:</p>
+        <ol class="text-gray-700 list-decimal pl-6 space-y-2 mb-6">
+          <li><strong>Clone the Repository:</strong> <code>git clone https://github.com/sharathchandra2004/jk-internships.git</code> then <code>cd jk-internships</code></li>
+          <li><strong>Install Dependencies:</strong> Ensure Python 3.8+ is installed, then run <code>pip install -r requirements.txt</code></li>
+          <li><strong>API Key Setup:</strong> Replace the placeholder Cohere API key in <code>finalapp.py</code> with your own key from Cohere.</li>
+          <li><strong>Run the Application:</strong> Use <code>streamlit run finalapp.py</code> to launch the app at <code>http://localhost:8501</code>.</li>
+        </ol>
+        <div class="text-center mt-8">
+          <a href="https://github.com/sharathchandra2004/jk-internships.git" target="_blank" rel="noopener" class="inline-flex items-center px-6 py-3 rounded-full bg-gradient-to-r from-yellow-500 to-orange-400 text-white font-bold shadow-lg hover:scale-105 hover:from-yellow-600 hover:to-orange-500 transition-all duration-300">
+            <i class="fab fa-github mr-2"></i> Explore the Code
+          </a>
+          <a href="https://jk-internships-dwquglnvbmsgb4aouqjfzz.streamlit.app/" target="_blank" rel="noopener" class="inline-flex items-center px-6 py-3 rounded-full bg-gradient-to-r from-orange-500 to-red-400 text-white font-bold shadow-lg hover:scale-105 hover:from-orange-600 hover:to-red-500 transition-all duration-300 ml-4">
+            <i class="fas fa-external-link-alt mr-2"></i> View App
+          </a>
+        </div>
       </div>
-      <div class="bg-white rounded-xl shadow p-6 flex flex-col items-center">
-        <i class="fas fa-pen-nib text-indigo-500 text-4xl mb-5"></i>
-        <h3 class="font-semibold text-xl mb-3">Easy Content Creation</h3>
-        <p class="text-gray-600 text-center text-lg">Markdown support and distraction-free writing for creators.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- TECH STACK BADGES -->
-  <section class="max-w-3xl w-full mx-auto px-4 py-6 flex flex-wrap gap-3 justify-center">
-    <span class="inline-block rounded-full px-4 py-1 text-lg font-semibold bg-yellow-100 text-yellow-700"><i class="fab fa-figma mr-1"></i> Figma</span>
-    <span class="inline-block rounded-full px-4 py-1 text-lg font-semibold bg-pink-100 text-pink-700"><i class="fab fa-react mr-1"></i> Next.js</span>
-    <span class="inline-block rounded-full px-4 py-1 text-lg font-semibold bg-indigo-100 text-indigo-700"><i class="fas fa-file-alt mr-1"></i> Markdown</span>
-    <span class="inline-block rounded-full px-4 py-1 text-lg font-semibold bg-green-100 text-green-700"><i class="fas fa-rocket mr-1"></i> Vercel</span>
-  </section>
-
-  <!-- ACTION BUTTONS -->
-  <section class="max-w-2xl w-full mx-auto px-4 py-8 flex flex-col sm:flex-row gap-4 justify-center">
-    <a href="https://github.com/yourusername/blog-website" target="_blank" class="flex-1 px-6 py-4 rounded-full bg-yellow-600 hover:bg-yellow-700 text-white font-bold shadow transition-all duration-200 text-center text-xl flex items-center justify-center gap-2"><i class="fab fa-github text-2xl"></i> View on GitHub</a>
-  </section>
-
-  <footer class="w-full text-center text-yellow-400 text-lg py-8 border-t border-yellow-100">&copy; 2024 Sharath Chandra R. All rights reserved.</footer>
+    </section>
+  </div>
+  <script>
+    // Scroll reveal effect for all .reveal elements
+    document.addEventListener('DOMContentLoaded', function() {
+      const revealEls = document.querySelectorAll('.reveal');
+      const revealObserver = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add('visible');
+          } else {
+            entry.target.classList.remove('visible');
+          }
+        });
+      }, { threshold: 0.15 });
+      revealEls.forEach(el => revealObserver.observe(el));
+    });
+  </script>
 </body>
 </html> 
