--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
               <span class="inline-flex items-center px-2 py-1 bg-yellow-600 text-white rounded-full text-xs"><i class="fas fa-chalkboard mr-1"></i>Presentations</span>
             </div>
           </div>
-          <!-- <div class="bg-neutral-900/60 rounded-2xl p-6 flex flex-col transition-all duration-300 hover:scale-105 hover:shadow-indigo-700/30 hover:shadow-2xl reveal">
+           <div class="bg-neutral-900/60 rounded-2xl p-6 flex flex-col transition-all duration-300 hover:scale-105 hover:shadow-indigo-700/30 hover:shadow-2xl reveal">
             <img src="https://storage.googleapis.com/a1aa/image/3cf4fb23-9995-4908-96e0-805f15c40ad7.jpg" alt="UX & UI Design" class="rounded-xl mb-4 w-full h-40 object-cover"/>
             <h3 class="font-semibold text-lg mb-2 text-white">UX & UI Design</h3>
             <p class="text-gray-300 mb-4">We develop beautiful design and user-friendly interfaces for websites and mobile applications.</p>
@@ -333,6 +333,7 @@
               <span class="inline-flex items-center px-2 py-1 bg-teal-500 text-white rounded-full text-xs"><i class="fab fa-canva mr-1"></i>Canva</span>
             </div>
           </div>
+          <!--
           <div class="bg-blue-900/60 rounded-2xl p-6 flex flex-col transition-all duration-300 hover:scale-105 hover:shadow-indigo-700/30 hover:shadow-2xl reveal">
             <h3 class="font-semibold text-lg mb-2 text-white">Website or web service development</h3>
             <p class="text-gray-300 mb-4">We develop beautiful design and user-friendly interfaces for websites and mobile applications.</p>
