--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
           <p class="text-lg text-gray-300 max-w-2xl mx-auto">A journey of growth, recognition, and impact. Here are some highlights that define my professional path and passion for excellence.</p>
         </div>
       </div>
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8">
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
         <a href="hackathon.html" class="transition-all duration-300 hover:scale-105 hover:shadow-indigo-700/30 hover:shadow-2xl bg-white/10 backdrop-blur rounded-2xl p-8 flex flex-col items-center border-t-4 border-yellow-400 shadow-lg reveal focus:outline-none focus:ring-4 focus:ring-yellow-200" style="text-decoration: none;">
           <div class="bg-yellow-900/40 rounded-full p-4 mb-4"><i class="fas fa-trophy fa-2x text-yellow-400"></i></div>
           <h3 class="font-semibold text-lg mb-2 text-white text-center">Finalists in National Level Hackathon</h3>
@@ -279,16 +279,11 @@
           <h3 class="font-semibold text-lg mb-2 text-white">Certificates</h3>
           <p class="text-gray-300 text-center">Achieved professional certification in Python programming and software engineering.</p>
         </a>
-        <a href="team-leadership.html" class="transition-all duration-300 hover:scale-105 hover:shadow-green-700/30 hover:shadow-2xl bg-white/10 backdrop-blur rounded-2xl p-8 flex flex-col items-center border-t-4 border-green-400 shadow-lg reveal focus:outline-none focus:ring-4 focus:ring-green-200" style="text-decoration: none;">
+        <a href="https://www.instagram.com/p/C8cFq-8yw6W/?igsh=dzZ0OHYzZmdycmQ=" class="transition-all duration-300 hover:scale-105 hover:shadow-green-700/30 hover:shadow-2xl bg-white/10 backdrop-blur rounded-2xl p-8 flex flex-col items-center border-t-4 border-green-400 shadow-lg reveal focus:outline-none focus:ring-4 focus:ring-green-200" style="text-decoration: none;">
           <div class="bg-green-900/40 rounded-full p-4 mb-4"><i class="fas fa-users fa-2x text-green-300"></i></div>
           <h3 class="font-semibold text-lg mb-2 text-white">Team Leadership</h3>
           <p class="text-gray-300 text-center">Led multiple successful projects with cross-functional teams, delivering on time and exceeding expectations.</p>
         </a>
-        <!-- <a href="client-satisfaction.html" class="transition-all duration-300 hover:scale-105 hover:shadow-pink-700/30 hover:shadow-2xl bg-white/10 backdrop-blur rounded-2xl p-8 flex flex-col items-center border-t-4 border-pink-400 shadow-lg reveal focus:outline-none focus:ring-4 focus:ring-pink-200" style="text-decoration: none;">
-          <div class="bg-pink-900/40 rounded-full p-4 mb-4"><i class="fas fa-star fa-2x text-pink-300"></i></div>
-          <h3 class="font-semibold text-lg mb-2 text-white">Client Satisfaction</h3>
-          <p class="text-gray-300 text-center">Consistently received top ratings and positive feedback from clients for quality and reliability.</p>
-        </a> -->
       </div>
     </section>
     <!-- Services Section -->
@@ -343,8 +338,8 @@
             <h3 class="font-semibold text-lg mb-2 text-white">Implementation of Bitrix24</h3>
             <p class="text-gray-300 mb-4">To automate business processes and improve the work of the sales department.</p>
           </div>
-        </div>
-      </div> -->
+        </div> -->
+      </div>
     </section>
     <!-- Contact Section -->
     <section class="mt-20 w-full max-w-6xl mx-auto px-8 sm:px-0 reveal text-xl" id="contact">
