--- a/index.html
+++ b/index.html
@@ -268,18 +268,18 @@
           <p class="text-lg text-gray-300 max-w-2xl mx-auto">A journey of growth, recognition, and impact. Here are some highlights that define my professional path and passion for excellence.</p>
         </div>
       </div>
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
-        <a href="hackathon.html" class="transition-all duration-300 hover:scale-105 hover:shadow-indigo-700/30 hover:shadow-2xl bg-white/10 backdrop-blur rounded-2xl p-8 flex flex-col items-center border-t-4 border-yellow-400 shadow-lg reveal focus:outline-none focus:ring-4 focus:ring-yellow-200" style="text-decoration: none;">
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-10 justify-center max-w-5xl mx-auto">
+        <a href="hackathon.html" class="transition-all duration-300 hover:scale-105 hover:shadow-indigo-700/30 hover:shadow-2xl bg-white/10 backdrop-blur rounded-2xl p-10 flex flex-col items-center border-t-4 border-yellow-400 shadow-lg reveal focus:outline-none focus:ring-4 focus:ring-yellow-200 min-w-[260px] max-w-xs w-full" style="text-decoration: none;">
           <div class="bg-yellow-900/40 rounded-full p-4 mb-4"><i class="fas fa-trophy fa-2x text-yellow-400"></i></div>
           <h3 class="font-semibold text-lg mb-2 text-white text-center">Finalists in National Level Hackathon</h3>
           <p class="text-gray-300 text-center">Finalist in a national hackathon, recognized for innovative problem-solving and strong teamwork on a real-world challenge.</p>
         </a>
-        <a href="certificates.html" class="transition-all duration-300 hover:scale-105 hover:shadow-indigo-700/30 hover:shadow-2xl bg-white/10 backdrop-blur rounded-2xl p-8 flex flex-col items-center border-t-4 border-indigo-400 shadow-lg reveal focus:outline-none focus:ring-4 focus:ring-indigo-200" style="text-decoration: none;">
+        <a href="certificates.html" class="transition-all duration-300 hover:scale-105 hover:shadow-indigo-700/30 hover:shadow-2xl bg-white/10 backdrop-blur rounded-2xl p-10 flex flex-col items-center border-t-4 border-indigo-400 shadow-lg reveal focus:outline-none focus:ring-4 focus:ring-indigo-200 min-w-[260px] max-w-xs w-full" style="text-decoration: none;">
           <div class="bg-indigo-900/40 rounded-full p-4 mb-4"><i class="fas fa-certificate fa-2x text-indigo-300"></i></div>
           <h3 class="font-semibold text-lg mb-2 text-white">Certificates</h3>
           <p class="text-gray-300 text-center">Achieved professional certification in Python programming and software engineering.</p>
         </a>
-        <a href="https://www.instagram.com/p/C8cFq-8yw6W/?igsh=dzZ0OHYzZmdycmQ=" class="transition-all duration-300 hover:scale-105 hover:shadow-green-700/30 hover:shadow-2xl bg-white/10 backdrop-blur rounded-2xl p-8 flex flex-col items-center border-t-4 border-green-400 shadow-lg reveal focus:outline-none focus:ring-4 focus:ring-green-200" style="text-decoration: none;">
+        <a href="https://www.instagram.com/p/C8cFq-8yw6W/?igsh=dzZ0OHYzZmdycmQ=" class="transition-all duration-300 hover:scale-105 hover:shadow-green-700/30 hover:shadow-2xl bg-white/10 backdrop-blur rounded-2xl p-10 flex flex-col items-center border-t-4 border-green-400 shadow-lg reveal focus:outline-none focus:ring-4 focus:ring-green-200 min-w-[260px] max-w-xs w-full" style="text-decoration: none;">
           <div class="bg-green-900/40 rounded-full p-4 mb-4"><i class="fas fa-users fa-2x text-green-300"></i></div>
           <h3 class="font-semibold text-lg mb-2 text-white">Team Leadership</h3>
           <p class="text-gray-300 text-center">Led multiple successful projects with cross-functional teams, delivering on time and exceeding expectations.</p>
