--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
           <h3 class="font-semibold text-lg mb-2 text-white">Certificates</h3>
           <p class="text-gray-300 text-center">Achieved professional certification in Python programming and software engineering.</p>
         </a>
-        <a href="https://www.instagram.com/p/C8cFq-8yw6W/?igsh=dzZ0OHYzZmdycmQ=" class="transition-all duration-300 hover:scale-105 hover:shadow-green-700/30 hover:shadow-2xl bg-white/10 backdrop-blur rounded-2xl p-10 flex flex-col items-center border-t-4 border-green-400 shadow-lg reveal focus:outline-none focus:ring-4 focus:ring-green-200 min-w-[260px] max-w-xs w-full" style="text-decoration: none;">
+        <a href="team-leadership.html" class="transition-all duration-300 hover:scale-105 hover:shadow-green-700/30 hover:shadow-2xl bg-white/10 backdrop-blur rounded-2xl p-10 flex flex-col items-center border-t-4 border-green-400 shadow-lg reveal focus:outline-none focus:ring-4 focus:ring-green-200 min-w-[260px] max-w-xs w-full" style="text-decoration: none;">
           <div class="bg-green-900/40 rounded-full p-4 mb-4"><i class="fas fa-users fa-2x text-green-300"></i></div>
           <h3 class="font-semibold text-lg mb-2 text-white">Team Leadership</h3>
           <p class="text-gray-300 text-center">Led multiple successful projects with cross-functional teams, delivering on time and exceeding expectations.</p>
