--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
       </h2>
       <div class="flex flex-col items-center w-full z-10 mt-2">
         <p class="text-lg text-gray-300 max-w-2xl mx-auto mb-4 hero-fade text-center" style="font-family: 'Poppins', 'Inter', sans-serif;">
-          I'm a python developer specializing in crafting clean, modern websites and apps that delight users and drive business growth.
+          “I don’t just write code—I script possibilities.I see patterns where others see problems, and I turn ideas into intuitive experiences. This isn’t just tech—it’s my way of leaving a signature on the future.”
+
+
         </p>
         <a href="#work"
            class="relative inline-flex items-center justify-center px-10 py-4 mt-4 rounded-full font-bold text-xl hero-fade group overflow-hidden"
