--- a/index.html
+++ b/index.html
@@ -95,9 +95,7 @@
       </h2>
       <div class="flex flex-col items-center w-full z-10 mt-2">
         <p class="text-lg text-gray-300 max-w-2xl mx-auto mb-4 hero-fade text-center" style="font-family: 'Poppins', 'Inter', sans-serif;">
-          “I don’t just write code—I script possibilities.I see patterns where others see problems, and I turn ideas into intuitive experiences. This isn’t just tech—it’s my way of leaving a signature on the future.”
-
-
+          "I don't just write code—I script possibilities.I see patterns where others see problems, and I turn ideas into intuitive experiences. This isn't just tech—it's my way of leaving a signature on the future."
         </p>
         <a href="#work"
            class="relative inline-flex items-center justify-center px-10 py-4 mt-4 rounded-full font-bold text-xl hero-fade group overflow-hidden"
@@ -189,7 +187,7 @@
             <p class="mt-2 text-gray-300 text-lg group-hover:text-gray-100 transition-colors duration-200">A Python-based project to teach and demonstrate the fundamentals of working with APIs. Includes hands-on examples and real-world use cases.</p>
           </a>
           <!-- Project Card 4 -->
-          <a href="https://github.com/sharathchandra2004/jk-internships.git" class="group relative min-w-[340px] md:min-w-[420px] max-w-[90vw] snap-center bg-gradient-to-br from-yellow-900/60 via-neutral-900/80 to-yellow-800/60 backdrop-blur-lg rounded-3xl p-10 shadow-2xl border-4 border-yellow-500/40 hover:border-yellow-400 transition-all duration-300 overflow-hidden cursor-pointer hover:scale-102 hover:shadow-yellow-400/30 hover:-translate-y-1 project-card block focus:outline-none" style="text-decoration: none;">
+          <a href="project4.html" class="group relative min-w-[340px] md:min-w-[420px] max-w-[90vw] snap-center bg-gradient-to-br from-yellow-900/60 via-neutral-900/80 to-yellow-800/60 backdrop-blur-lg rounded-3xl p-10 shadow-2xl border-4 border-yellow-500/40 hover:border-yellow-400 transition-all duration-300 overflow-hidden cursor-pointer hover:scale-102 hover:shadow-yellow-400/30 hover:-translate-y-1 project-card block focus:outline-none" style="text-decoration: none;">
             <div class="absolute -top-10 -right-10 w-40 h-40 bg-yellow-500/20 rounded-full blur-2xl opacity-60 pointer-events-none"></div>
             <span class="absolute left-8 top-8 text-7xl font-extrabold text-yellow-900/20 select-none pointer-events-none">04</span>
             <div class="flex items-center justify-between mb-4 relative z-10">
