--- a/project4.html
+++ b/project4.html
@@ -63,9 +63,9 @@
         <div class="w-24 h-24 rounded-full bg-yellow-100 flex items-center justify-center mb-4 shadow-lg">
           <i class="fas fa-chart-line text-5xl text-yellow-500"></i>
         </div>
-        <span class="inline-block px-4 py-1 bg-yellow-100 text-yellow-700 rounded-full text-sm font-semibold mb-4">Data Analysis Project</span>
+        <span class="inline-block px-4 py-1 bg-yellow-100 text-yellow-700 rounded-full text-sm font-semibold mb-4">Data Analysis and Machine Learning Project</span>
       </div>
-      <h1 class="text-4xl sm:text-5xl font-extrabold mb-4 tracking-tight flex items-center justify-center gap-3">Textile Dye Supplier Risk Dashboard</h1>
+      <h1 class="text-4xl sm:text-5xl font-extrabold mb-4 tracking-tight flex items-center justify-center gap-3">Textile Dye Supplier Risk Classification</h1>
       <p class="text-lg text-gray-600 max-w-2xl mx-auto">A Streamlit-based web application for analyzing and visualizing risks associated with top textile dye suppliers for 2023-2024.</p>
       <a href="https://github.com/sharathchandra2004/jk-internships.git" target="_blank" rel="noopener" class="mt-6 inline-flex items-center px-6 py-3 rounded-full bg-gradient-to-r from-yellow-500 to-orange-400 text-white font-bold shadow-lg hover:scale-105 hover:from-yellow-600 hover:to-orange-500 transition-all duration-300">
         <i class="fab fa-github mr-2"></i> View on GitHub
