--- a/project4.html
+++ b/project4.html
@@ -76,7 +76,7 @@
       <div class="bg-white/80 backdrop-blur rounded-2xl shadow-lg p-8 border-t-4 border-yellow-400">
         <h2 class="text-2xl font-bold text-gray-900 mb-6">Project Overview</h2>
         <p class="text-gray-700 mb-6">This project is designed to help stakeholders in the textile industry monitor and analyze risks related to dye suppliers. It integrates advanced risk classification, sentiment analysis using VADER, and AI-generated recommendations powered by Cohere. The interface offers a modern, dark-themed UI with interactive visualizations built using Plotly.</p>
-        <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=1200&q=80" alt="Textile Dye Supplier Risk Dashboard" class="w-full rounded-xl shadow-lg mb-6 border-2 border-yellow-200">
+        <img src="Black Elegant and Modern Startup Pitch Deck Presentation (1).png">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6">
           <div class="bg-yellow-50 rounded-xl p-4 shadow">
             <h3 class="font-bold text-lg text-yellow-700 mb-2">Key Features</h3>
