--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
               <span class="inline-flex items-center px-4 py-1 bg-yellow-700/30 text-yellow-200 rounded-full text-sm font-semibold shadow">Data Analysis</span>
               <i class="fas fa-chart-line text-3xl text-yellow-300 drop-shadow group-hover:animate-wiggle"></i>
             </div>
-            <img alt="Textile Dye Supplier Risk Analysis Dashboard preview" class="w-full h-56 object-cover rounded-xl mb-6 border-2 border-yellow-500/20 group-hover:scale-105 transition-transform duration-300 shadow-lg" src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=800&q=80"/>
+            <img alt="Textile Dye Supplier Risk Analysis Dashboard preview" class="w-full h-56 object-cover rounded-xl mb-6 border-2 border-yellow-500/20 group-hover:scale-105 transition-transform duration-300 shadow-lg" src="Black Elegant and Modern Startup Pitch Deck Presentation (1).png"/>
             <h3 class="mt-2 text-3xl font-extrabold text-white group-hover:text-yellow-300 transition-colors duration-200">Textile Dye Supplier Risk Classification</h3>
             <p class="mt-2 text-gray-300 text-lg group-hover:text-gray-100 transition-colors duration-200">A Streamlit-based app for analyzing risks of textile dye suppliers with interactive visualizations and AI-powered insights for 2023-2024.</p>
           </a>
