--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <div class="absolute -top-10 -right-10 w-40 h-40 bg-yellow-500/20 rounded-full blur-2xl opacity-60 pointer-events-none"></div>
             <span class="absolute left-8 top-8 text-7xl font-extrabold text-yellow-900/20 select-none pointer-events-none">04</span>
             <div class="flex items-center justify-between mb-4 relative z-10">
-              <span class="inline-flex items-center px-4 py-1 bg-yellow-700/30 text-yellow-200 rounded-full text-sm font-semibold shadow">Data Analysis</span>
+              <span class="inline-flex items-center px-4 py-1 bg-yellow-700/30 text-yellow-200 rounded-full text-sm font-semibold shadow">Data Analysis & Machine Learning</span>
               <i class="fas fa-chart-line text-3xl text-yellow-300 drop-shadow group-hover:animate-wiggle"></i>
             </div>
             <img alt="Textile Dye Supplier Risk Analysis Dashboard preview" class="w-full h-56 object-cover rounded-xl mb-6 border-2 border-yellow-500/20 group-hover:scale-105 transition-transform duration-300 shadow-lg" src="Black Elegant and Modern Startup Pitch Deck Presentation (1).png"/>
