--- a/project2.html
+++ b/project2.html
@@ -54,6 +54,7 @@
   <!-- ACTION BUTTONS -->
   <section class="max-w-2xl w-full mx-auto px-4 py-8 flex flex-col sm:flex-row gap-4 justify-center">
     <a href="https://github.com/sharathchandra2004/Idiom-Insight-A-Detector-for-Figurative-Expressions" target="_blank" class="flex-1 px-6 py-4 rounded-full bg-blue-700 hover:bg-blue-800 text-white font-bold shadow transition-all duration-200 text-center text-xl flex items-center justify-center gap-2"><i class="fab fa-github text-2xl"></i> View on GitHub</a>
+    <a href="https://idiom-insight.streamlit.app" target="_blank" class="flex-1 px-6 py-4 rounded-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold shadow transition-all duration-200 text-center text-xl flex items-center justify-center gap-2"><i class="fas fa-external-link-alt text-2xl"></i> View App</a>
   </section>
 
   <footer class="w-full text-center text-blue-400 text-lg py-8 border-t border-blue-100">&copy; 2024 Sharath Chandra R. All rights reserved.</footer>
