--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
               <span class="inline-flex items-center px-4 py-1 bg-blue-700/30 text-blue-200 rounded-full text-sm font-semibold shadow">NLP</span>
               <i class="fas fa-brain text-3xl text-blue-300 drop-shadow group-hover:animate-wiggle"></i>
             </div>
-            <img alt="Idiom Insight UI preview" class="w-full h-56 object-cover rounded-xl mb-6 border-2 border-blue-500/20 group-hover:scale-105 transition-transform duration-300 shadow-lg" src="https://raw.githubusercontent.com/sharathchandra2004/Idiom-Insight-A-Detector-for-Figurative-Expressions/main/ui%20ss.PNG"/>
+            <img alt="Idiom Insight UI preview" class="w-full h-56 object-cover rounded-xl mb-6 border-2 border-blue-500/20 group-hover:scale-105 transition-transform duration-300 shadow-lg" src="github pic.PNG"/>
             <h3 class="mt-2 text-3xl font-extrabold text-white group-hover:text-blue-400 transition-colors duration-200">Idiom Insight: Figurative Expression Detector</h3>
             <p class="mt-2 text-gray-300 text-lg group-hover:text-gray-100 transition-colors duration-200">Detects idioms and figurative expressions in text using NLP and fuzzy matching. Ideal for language learners, teachers, and writers.</p>
           </a>
